Fix spacing top header

--- a/Frontend/resources/assets/sass/template/main.scss
+++ b/Frontend/resources/assets/sass/template/main.scss
@@ -75,6 +75,7 @@ a#scrollUp i{
   font-size: 12px;
   color: #696763;
   font-family: 'Roboto', sans-serif;
+  padding: 8px 15px;
 }
 
 
@@ -113,7 +114,7 @@ a#scrollUp i{
 
 
 .fa-facebook:hover {
-  background: #0083C9;
+  background: #3B5998;
 }
 
 .fa-twitter:hover  {
@@ -121,7 +122,7 @@ a#scrollUp i{
 }
 
 .fa-linkedin:hover  {
-	background:#FF4518;
+	background:#2977B5;
 }
 
 .fa-dribbble:hover  {
